stylesheets/main.less
@blue: #6597cf;
@gray: #aaa;
@circle-size: 3.5em;
@mini-circle-size: 1em;
@subheader-size: 0.28em;
@clock-size: 8em;
@header-left-margin: 0.44em;
@nav-height: 50px;

@screen-sm: 768px;
@screen-md: 992px;
@screen-lg: 1200px;

body {
    padding-top: @nav-height;
    font: 400 ~"12px/1.4" 'Open Sans';
    @media (min-width: @screen-sm) { font-size: 16px; }
    @media (min-width: @screen-md) { font-size: 18px; }
    @media (min-width: @screen-sm) { font-size: 20px; }
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Open Sans';
    font-weight: 300;
}

h1.huge {
    font-size: 4em;
    @media (min-width: @screen-md) { font-size: 5em; }
}

.blue {
    color: @blue;
}

.dark {
    background-color: #444;
    color: white;
}

header, section {
    position: fixed;
    height: 100%;
    width: 100%;
}

.logo {
    display: inline-block;
    position: relative;
    font-size: 50px;
    color: white;
    width: 5em;
    height: @circle-size;
    
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    //cursor: default;
    
    .logo-circle {
        position: absolute;
        z-index: -1;
        width: @circle-size;
        height: @circle-size;
        border-radius: (@circle-size / 2);
        background-color: @blue;
    }
    
    h1 {
        font: 700 ~"1em/0.9" 'Open Sans Condensed';
        margin: 1em 0 0 @header-left-margin;
    }
    
    h2 {
        font: 300 @subheader-size 'Open Sans Condensed';
        margin: 0 0 0 (1 / @subheader-size * @header-left-margin + 0.1071428571 * @subheader-size);
        white-space: nowrap;
    }
}

.logo-mini {
    width: 1em;
    font-size: 25px;
    height: @mini-circle-size;
    .logo-circle {
        width: @mini-circle-size;
        height: @mini-circle-size;
        border-radius: (@mini-circle-size / 2);
    }
    h1 {
        margin: 0 0 0 .3em;
    }
}

.clock {
    display: inline-block;
    border: .3em solid black;
    width: @clock-size;
    height: @clock-size;
    border-radius: (@clock-size / 2);
    
    & > div {
        position: absolute;
        height: .05em;
        background-color: black;
        border: .125em solid black;
        //border-radius: .1em;
        -ms-transform-origin: 98% 48%;
        -moz-transform-origin: 98% 48%;
        -webkit-transform-origin: 98% 48%;
        transform-origin: 98% 48%;
    }
    .clock-hour {
        width: 26.6%;
        margin-left: 25%;
        margin-top: (@clock-size / 2 - .125em);
    }
    .clock-minute {
        width: 42%;
        margin-left: 10%;
        -ms-transform: rotate(90deg);
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
        margin-top: (@clock-size / 2 - .125em);
    }
}

nav {
    width: 100%;
    margin-top: -@nav-height;
    height: @nav-height;
    position: fixed;
    z-index: 2;
    text-transform: uppercase;
    padding: 0 10px;
    
    #mini-logo {
        overflow: hidden;
        padding: 0;
        margin: 0 0 0 10px;
    }
    
    .logo-mini {
        top: 2px;
    }
    a {
        color: @gray;
        display: inline-block;
        padding: 0 10px;
        line-height: @nav-height;
        vertical-align: top;
        &:hover {
            color: lighten(@blue, 15%);
            text-decoration: none;
        }
        &.active {
            color: @blue;
            border-bottom: 1px solid @blue;
        }
    }
}

header {
    margin-top: -@nav-height;
    box-sizing: border-box;
    padding-top: 160px;
    padding-left: 7%;
    #main-logo {
        margin-left: .4em;
    }
    #lightbulb {
        position: absolute;
        top: -60px;
        right: 10%;
        z-index: -1;
        -ms-transform-origin: 100% 0;
        -moz-transform-origin: 100% 0;
        -webkit-transform-origin: 100% 0;
        transform-origin: 100% 0;
        
    }
    #tip {
        font-size: 1.2em;
        color: @gray;
        position: absolute;
        bottom: 20px;
        right: 40px;
        text-transform: uppercase;
        white-space: nowrap;
    }
    @media (min-width: @screen-sm) {
        padding-top: 190px;
        #main-logo { font-size: 75px; }
    }
    @media (min-width: @screen-md) {
        padding-top: 240px;
        #main-logo { font-size: 100px; }
    }
    @media (min-width: @screen-lg) {
        #main-logo { margin-left: 1em; }
    }
}

#scene1 {
    top: 0%;
    padding: 160px 0 0 1em;
    h1 {
        position: absolute;
        width: 100%;
        -ms-transform-origin: 3em;
        -moz-transform-origin: 3em;
        -webkit-transform-origin: 3em;
        -transform-origin: 3em;
    }
}

#scene2 {
    z-index: 1;
    top: 0%;
    background-color: #222;
    #clock {
        width: @clock-size;
        display: inline-block;
        position: absolute;
        top: 50%;
        left: 50%;
        margin: -(@clock-size / 2) 0 0 -(@clock-size / 2);
        -ms-transform-origin: (@clock-size / 2) (@clock-size / 2 + .2em);
        -webkit-transform-origin: (@clock-size / 2) (@clock-size / 2 + .2em);
        -moz-transform-origin: (@clock-size / 2) (@clock-size / 2 + .2em);
        transform-origin: (@clock-size / 2) (@clock-size / 2 + .2em);
        border-color: white;
        * {
            border-color: white;
            background-color: white;
        }
    }
    #switchable-is {
        width: 100%;
        text-align: center;
        font-size: 3em;
        color: @gray;
        position: absolute;
        top: 60%;
        span {
            color: white;
            display: none;
            -ms-transform-origin: 100% 100%;
            -webkit-transform-origin: 100% 100%;
            -moz-transform-origin: 100% 100%;
            transform-origin-y: 100% 100%;
        }
    }
}

#scene3 {
    #explanation {
        -webkit-transform: translateZ(0);
        padding: 2em 0 0 2em;
        p:nth-child(5) {
            left: 2em;
            white-space: nowrap;
        }
    }
    
    @media (max-width: 320px) {
        svg {
            font-size: .8em;
        }
    }
    
    #lightbulb-column {
        float: right;
    }
    #svg-device {
        display: block;
        z-index: 1;
        width: 8em;
        height: 13em;
        position: relative;
        margin-left: 2.5em;
    }
    #svg-lightbulb {
        display: block;
        width: 150em;
        height: 45em;
        margin-left: -27em;
    }
    #svg-phone {
        display: block;
        width: 10em;
        height: 17em;
        margin-top: 3em;
    }
    #signal {
        z-index: -1;
        margin-top: -10em;
        margin-left: 7em;
        svg {
            margin: -75em;
            height: 150em;
        }
        circle {
            stroke: @blue;
            stroke-width: .1;
        }
    }
}

#scene4 {
    
    #pic-container {
        margin-top: -@nav-height;
        font-size: 0;
        position: absolute;
        width: 100%;
        height: 100%;
        white-space: nowrap;
        & > div {
            display: inline-block;
            width: 110%;
            height: 100%;
            background-size: cover;
        }
        #pic-esteban { background-image: url('../images/esteban.jpg'); }
        #pic-brett { background-image: url('../images/brett.jpg'); }
        #pic-derek { background-image: url('../images/derek.jpg'); }
        #pic-andrew { background-image: url('../images/andrew.jpg'); }
    }
    #bio-container {
        position: absolute;
        width: 100%;
        bottom: 0;
        height: 10em;
        background-color: rgba(0, 0, 0, 0.4);
        white-space: nowrap;
        & > div {
            display: inline-block;
            width: 110%;
            padding: 1em;
            h2 {
                text-transform: uppercase;
                font-weight: 300;
                font-size: 3em;
                line-height: 1;
                color: white;
            }
            h6 {
                font-size: 1em;
                line-height: 1;
                color: #222;
                text-transform: uppercase;
                color: white;
            }
        }
    }
}

